--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,11 @@
 
 @import url("./clock.css");
 @import url("./user.css");
-@import url("./background.css");
+@import url("./animation.css");
+@import url("./menue.css");
+@import url("./weather.css");
+@import url("./task.css");
+@import url("./checkBox.css");
 
 * {
   box-sizing: border-box;
