--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 @import url("./weather.css");
 @import url("./task.css");
 @import url("./checkBox.css");
+@import url("./calender.css");
 
 * {
   box-sizing: border-box;
